add my first project backround and title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEW YEAR WEBSITE CREATE</title>
+    <title>New Year Party</title>
     <link rel="stylesheet" href="stylepro/style.css">
 </head>
 <body>
@@ -17,13 +17,14 @@
 
         </section>
 
+
     </header>
     <main>
 
     </main>
-    <header>
+    <footer>
 
-    </header>
+    </footer>
     
 </body>
 </html>
